--- a/views/admin/logs.jade
+++ b/views/admin/logs.jade
@@ -13,7 +13,8 @@ block content
             th What
             th When
           for log in logs
-            tr
-              td.user-badge(title=log.who.username, data-username=log.who.username)= log.who.fullName
-              td= log.what
-              td(title=moment(log.when).format("dddd, MMMM Do YYYY, h:mm:ss a"))= moment(log.when).fromNow()
+            if log.who != null
+              tr
+                td.user-badge(title=log.who.username, data-username=log.who.username)= log.who.fullName
+                td= log.what
+                td(title=moment(log.when).format("dddd, MMMM Do YYYY, h:mm:ss a"))= moment(log.when).fromNow()
