--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -53,7 +53,28 @@ block content
       .col-xs-12
         .page-header
           h2 All Users
-            small.right #{users.length} total
+            small.right
+              ul.pagination.pagination-sm
+                li
+                  a(href="?page="+prev, aria-label="Previous")
+                    span(aria-hidden="true") &laquo;
+                if (pageNum - 2) > 0
+                  li
+                    a(href="?page="+(pageNum - 2))=(pageNum - 2)
+                if (pageNum - 1) > 0
+                  li
+                    a(href="?page="+(pageNum - 1))=(pageNum - 1)
+                li.active
+                  a(href="#")= pageNum
+                if (pageNum + 2) <= pages
+                  li
+                    a(href="?page="+(pageNum + 1))=(pageNum + 1)
+                if (pageNum + 1) <= pages
+                  li
+                    a(href="?page="+(pageNum + 2))=(pageNum + 2)
+                li
+                  a(href="?page="+next, aria-label="Previous")
+                    span(aria-hidden="true") &raquo;
     .row
       .col-xs-12
         table.table.user-table
