--- a/views/teachers/list.jade
+++ b/views/teachers/list.jade
@@ -4,8 +4,10 @@ block content
   .container
     .page-header
       h1 Teachers
-        small.right= teachers.length
-      
+        small.right
+          include /parts/pagination
+    
+    
     .teacher-list
       include /info
       //form#search-teachers
