Actaully filled index page

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,24 +4,47 @@ block content
   .container
     include /info
     .jumbotron
-      h1(style="text-transform: capitalize") In Just #{moment("2015-09-09").fromNow(true)}
+      h1(style="text-transform: capitalize") Welcome to Adiutor
       p.
-        It will begin again.
+        In just #[b= moment("2015-09-09").fromNow(true)] it will begin again. The work, the stress, the responsibilities. If only there
+        was a way to make it all easier. What if you could alleviate some of the stress of Regis High School by using a service that
+        allows you to track your academic career while also providing other useful social utilities at the same time?
 
     .row
-      .col-xs-12.col-sm-6.col-md-4.center
-        img.panel.panel-default(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
-      .col-xs-12.col-sm-6.col-md-8
+      //.col-xs-12.col-sm-6.col-md-5.center
+      //  img.panel.panel-default(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
+      .col-xs-12.col-sm-6
         .panel.panel-primary
           .panel-heading
-            h1.panel-title Statistics
+            h1.panel-title What is Adiutor?
           .panel-body
-            span The 2016 school year will start in #{moment("2015-09-09").diff(moment(), 'days')} days.
+            p.
+              #[b Adiutor] is a free, online Web service created specifically to allow Regis
+              students to get a better grasp on their academic life while at the same 
+              time providing an easy, customized platform for organization and collaboration
+              with their classmates and schoolmates.
+      .col-xs-12.col-sm-6
+        .panel.panel-info
+          .panel-heading
+            h1.panel-title What does it do?
+          .panel-body
+            p.
+              Make Regis a little easier to handle by keeping track of homework,
+              projects, tests, quizzes, grades, notes, tasks, reminders, friends,
+              schedules, meetings, clubs, groups, and more all in one place at
+              the same time.
+    
+    .row
+      .col-xs-12.center
+          h3 Sign in to Adiutor #[b(style="cursor: pointer;",data-toggle="modal", data-target="#login-modal") here] with your Regis credentials and get started. It's that easy!
     .row
       .col-xs-12
         .progress
           .progress-bar.progress-bar-striped.active(role="progressbar", aria-valuenow="40", aria-valuemin="0", aria-valuemax="100", style="width: 40%")
             span.sr-only 40% ready
+    .row
+      .col-xs-12
+        
     .row
       .col-xs-12
         a(class="twitter-timeline", data-widget-id="268815703732260864", href="https://twitter.com/regisalerts", data-tweet-limit="10") Tweets by @regisalerts
