Replaced most of the functionality of populate.js with connect.py

--- a/views/teachers/profile.jade
+++ b/views/teachers/profile.jade
@@ -9,7 +9,7 @@ block content
     
     else
       .page-header
-        h1= title
+        h1 #[b Teacher] #{teacher.fullName}
       .row
         .col-xs-12.col-sm-2
           img.teacher-profile-img(src=teacher.image)
