--- a/views/courses/one.jade
+++ b/views/courses/one.jade
@@ -6,16 +6,16 @@ block content
       if course == false
         h1 No Such Course Exists
       else
-        h1 Course #{course.title}
+        h1 #[b Course] #{course.title}
           if course.teacher
-            small.right Teacher #[a(href="/teachers/"+course.teacher.mID)= course.teacher.fullName}
+            small.right.teacher-badge(data-username=course.teacher.username) Teacher #{course.teacher.fullName} 
       include /info
 
     .row
       .col-xs-12
         if course != false
           if course.teacher
-            img(src=course.teacher.image, style="width: 150px")
+            img.teacher-badge(data-username=course.teacher.username, src=course.teacher.image, style="width: 150px")
 
     .row
       .col-xs-12
