--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -88,4 +88,4 @@ mixin class(course)
         h1.panel-title
           a(href="/courses/"+course.mID)= course.title
           if course.teacher
-            small.right.teacher-badge(data-username=course.teacher.username)= course.teacher.lastName
+            small.right.teacher-badge(data-username=course.teacher.username) Teacher #{course.teacher.fullName}
