Connect.py uses main database

--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -16,7 +16,7 @@ aside#sidebar
         li
           a(href="#") Busy
         li
-          a(href="#") Offline      
+          a(href="#", title="You will not appear on the online users list.") Offline      
     hr
   
   if (currentUser.rank > 4 || currentUser.username == "fmatranga18")
