--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -9,6 +9,25 @@ block content
         You have #[b 5 tests], #[b 6 homework assignments], 2 friend requests
     
     .row
+      .col-xs-12
+        .page-header
+          h2 Work  
+      .col-xs-12.col-sm-6
+        .panel.panel-default
+          .panel-body
+            h3.no-margin Today
+            br
+            p test ste ts etst etse tste
+      .col-xs-12.col-sm-6
+        .panel.panel-default
+          .panel-body
+            h3.no-margin Upcoming
+            br
+            p test ste ts etst etse tste
+    br
+    br
+    hr
+    .row
       .col-xs-12.col-sm-6.col-md-4
         .panel.panel-default#reminders-panel
           .panel-heading
