--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -38,16 +38,16 @@ aside#sidebar
           span.badge.right#reminders-count 0 
       li
         a(title="Manage your grades.", href="#") Grades
-          span.badge.right 0
+          //span.badge.right 0
       li(class=(helpers.isPage(page, "days") ? "active" : ""))
         a(href="/days", title="View all days that you have work (homework, tests, etc).") Work
-          span.badge.right 0
+          //span.badge.right 0
       li
         a(title="View and manage your friend list.", href="#") Friends
-          span.badge.right 0
+          //span.badge.right 0
       li
         a(href="#") Meetings
-          span.badge.right 0
+          //span.badge.right 0
     hr
     
   
