Login modal shows logging in progress

--- a/views/users/login-modal.jade
+++ b/views/users/login-modal.jade
@@ -32,4 +32,4 @@ if openLogin
                   br
                   span Don't believe me? See #[a(target="_blank", href="https://github.com/Apexal/adiutor/blob/master/routes/index.js") for yourself].
 
-                button.btn.right.btn-primary Login
+                button.btn.right.btn-primary#login-button Login
