--- a/views/admin/feedback.jade
+++ b/views/admin/feedback.jade
@@ -16,4 +16,4 @@ block content
               .panel-heading
                 h2.panel-title= f.feedbackType
               .panel-body
-                p= f.text
+                p.no-margin= f.text
