--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -9,9 +9,6 @@ block content
         You have #[b 5 tests], #[b 6 homework assignments], 2 friend requests
     
     .row
-      .col-xs-12
-        .page-header
-          h2 Work  
       .col-xs-12.col-sm-6
         .panel.panel-default
           .panel-body
@@ -24,8 +21,9 @@ block content
             h3.no-margin Upcoming
             br
             p test ste ts etst etse tste
-    br
-    br
+    .row
+      .col-xs-12.center
+        img(style="height: 100%; max-height: 500px;", src="/images/graph.png")
     hr
     .row
       .col-xs-12.col-sm-6.col-md-4
