Replaced 'components/' with 'vendor/'

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -26,6 +26,10 @@ block content
         img(style="height: 100%; max-height: 500px;", src="/images/graph.png")
     hr
     .row
+      .col-xs-12
+        include /parts/tabs
+    hrs
+    .row
       .col-xs-12.col-sm-6.col-md-4
         .panel.panel-default#reminders-panel
           .panel-heading
