Added some animations

--- a/views/days/index.jade
+++ b/views/days/index.jade
@@ -12,7 +12,7 @@ block content
 
 mixin day(day)
   .col-xs-12.col-sm-6.col-md-4
-    .panel.panel-default
+    .panel.panel-default.magictime.perspectiveDownRetourn
       .panel-body
         h3.no-margin
           a.undecorated(href="/days/"+moment(day.date).format("YYYY-MM-DD"))= moment(day.date).format("dddd, MMMM Do")
