--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,8 @@ html
     link(rel="stylesheet", href="/css/styles.css")
     link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/black-tie/jquery-ui.css")
     link(rel='stylesheet', href='//bootswatch.com/cosmo/bootstrap.min.css')
-    
+    link(rel="stylesheet", href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css")
+
   body
     include /parts/header
     
@@ -36,3 +37,5 @@ html
     
     script(src='/socket.io/socket.io.js')
     script(src="/js/script.js")
+    if openLogin
+      script $(function(){$("#login-modal").modal()})
