--- a/views/days/homework.jade
+++ b/views/days/homework.jade
@@ -23,7 +23,7 @@
   br
   if currentUser.courses.length > 0
     .row
-      form.form-inline#homework-form(method="POST", action="/days/"+date.format('YYYY-MM-DD')+"/homework?sd=B", role="form")
+      form.form-inline.center#homework-form(method="POST", action="/days/"+date.format('YYYY-MM-DD')+"/homework?sd=B", role="form")
         select.form-control(id="newHWItemCourse", name="newHWItemCourse", required=true)
           for course in currentUser.courses
             option(value=course.mID)= course.title
