--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -9,7 +9,7 @@ block content
         You have #[b 5 tests], #[b 6 homework assignments], 2 friend requests
     .row
       .col-xs-12
-        include /parts/tabs
+        include /tabs
     .row
       .col-xs-12.center
         img(style="height: 100%; max-height: 500px;", src="/images/graph.png")
