--- a/views/teachers/profile.jade
+++ b/views/teachers/profile.jade
@@ -14,7 +14,7 @@ block content
         .col-xs-12.col-sm-2
           img.teacher-profile-img(src=teacher.image)
         .col-xs-12.col-sm-10
-          b Liked by _% of students.
+          b Going by #{teacher.ratingCount} unique ratings, this teacher is #{teacher.ratingString}.
       
       hr
       .col-xs-12.col-sm-6
