--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -43,7 +43,7 @@ block content
     else
       .row
         for user in registered
-          .col-xs-12.col-sm-6.col-md-4.col-lg-3.text-center
+          .col-xs-12.col-sm-6.col-md-4.col-lg-3.text-center.magictime.vanishIn
             .user-box
               img(alt=user.bio, src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
               .btn-group.full-width
