--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -4,12 +4,13 @@ block content
   .container
     include /info
     .jumbotron
-      h1(style="text-transform: capitalize") Hello, #{currentUser.firstName}
-      p.magictime.swashIn.
-        You have #[b 5 tests], #[b 6 homework assignments], 2 friend requests
+      h1.no-margin(style="text-transform: capitalize") Hello, #{currentUser.firstName}
+      p.no-margin.magictime.swashIn.
+        It is #[b#clock Time & Date]. Today is a #[b#today-sd ?] Schedule Day.
+      span Only #[b= moment("2015-09-09").fromNow(true)] until school starts.
     .row
       .col-xs-12
-        include /tabs
+        include tabs
     .row
       .col-xs-12.center
         img(style="height: 100%; max-height: 500px;", src="/images/graph.png")
