--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -2,6 +2,7 @@ extends /layout
 
 block content
   .container
+    include /info
     if loggedIn
       h3 Online Now: 
         small#online-user-list
