--- a/views/advisement/one.jade
+++ b/views/advisement/one.jade
@@ -2,36 +2,37 @@ extends /layout
 
 block content
   .container
-      if advisement == false
-        .page-header
-          h1 No such adivsement exists!
-      else
-        .page-header
-          h1 Advisement #{advisement.title}
-            small.right= (registered.length/advisement.students.length)*10+"% registered"
-          h3 #[b= advisement.title] has #[b= registered.length] #{helpers.pluralize(registered.length, "user", "users")} registered out of #[b= advisement.students.length] and is advised by #[b= (advisement.teacher ? advisement.teacher.fullName : "Unknown")].
-        
-        .row
-          .col-xs-12.col-sm-4
-            if advisement.teacher
-              img(src=advisement.teacher.image)
+    include /info
+    if advisement == false
+      .page-header
+        h1 No such adivsement exists!
+    else
+      .page-header
+        h1 Advisement #{advisement.title}
+          small.right= (registered.length/advisement.students.length)*10+"% registered"
+        h3 #[b= advisement.title] has #[b= registered.length] #{helpers.pluralize(registered.length, "user", "users")} registered out of #[b= advisement.students.length] and is advised by #[b= (advisement.teacher ? advisement.teacher.fullName : "Unknown")].
+      
+      .row
+        .col-xs-12.col-sm-4
+          if advisement.teacher
+            img(src=advisement.teacher.image)
 
-          if registered.length > 0
-            .col-xs-12.col-sm-8
-              for user in registered
-                .col-xs-12.col-sm-6.text-center
-                  .advisement-user-box
-                    img(alt=user.bio, src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
-                    .btn-group.full-width
-                      button.full-width.btn.btn-default.dropdown-toggle(data-toggle="dropdown", ara-expanded="false", type="button")= user.fullName+" "
-                        span.caret
-                      ul.dropdown-menu(role="menu")
-                        li
-                          if loggedIn
-                            a(href="/users/"+user.username) View Profile
-                            a(href="/users/"+user.username+"/schedule") View Schedule
+        if registered.length > 0
+          .col-xs-12.col-sm-8
+            for user in registered
+              .col-xs-12.col-sm-6.text-center
+                .advisement-user-box
+                  img(alt=user.bio, src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
+                  .btn-group.full-width
+                    button.full-width.btn.btn-default.dropdown-toggle(data-toggle="dropdown", ara-expanded="false", type="button")= user.fullName+" "
+                      span.caret
+                    ul.dropdown-menu(role="menu")
+                      li
+                        if loggedIn
+                          a(href="/users/"+user.username) View Profile
+                          a(href="/users/"+user.username+"/schedule") View Schedule
                           a(href="mailto:"+user.email) Email
-        .row
-          .col-xs-12
-            hr
+      .row
+        .col-xs-12
+          hr
       a.btn.btn-primary(href="/advisements") All Advisements
