--- a/views/homework/one.jade
+++ b/views/homework/one.jade
@@ -5,6 +5,7 @@ block content
         progress#hw-progress(class="full", title="You are 0% done with homework!", value=0, data-value=0, max="100")
 
     .container
+      include /info
       if date == false
         .page-header
           h1 Invalid Date
