--- a/views/info.jade
+++ b/views/info.jade
@@ -12,3 +12,5 @@ if errs.length > 0
       br
     button.close(type="button", data-dismiss="alert")
       span &times;
+
+.alert.alert-danger Moodle has not yet been updated to reflect the new schedules, so data here is out of date till then.
