--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -2,6 +2,7 @@ extends /layout
 
 block content
   .container
+    include /info
     if user == false
       .page-header
         h1 That User Does Not Exist!
