GitHub student pack; name change to OnTrac

--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -4,7 +4,7 @@ block content
   .container
     include /info
     .jumbotron
-      h1(style="text-transform: capitalize") Welcome to Adiutor
+      h1(style="text-transform: capitalize") Welcome to OnTrac
       p.
         In just #[b= moment("2015-09-09").fromNow(true)] it will begin again. The work, the stress, the responsibilities. If only there
         was a way to make it all easier.
@@ -17,7 +17,7 @@ block content
           h3.no-margin What is it?
         br
         p.
-          #[b Adiutor] is a free, online Web service created specifically to allow Regis
+          #[b OnTrac] is a free, online Web service created specifically to allow Regis
           students to get a better grasp on their academic life while at the same 
           time providing an easy, customized platform for organization and collaboration
           with their classmates and schoolmates.
@@ -28,10 +28,10 @@ block content
       .col-xs-12.col-sm-6
         .panel.panel-primary
           .panel-heading
-            h1.panel-title What is Adiutor?
+            h1.panel-title What is OnTrac?
           .panel-body
             p.
-              #[b Adiutor] is a free, online Web service created specifically to allow Regis
+              #[b OnTrac] is a free, online Web service created specifically to allow Regis
               students to get a better grasp on their academic life while at the same 
               time providing an easy, customized platform for organization and collaboration
               with their classmates and schoolmates.
@@ -48,7 +48,7 @@ block content
     
     .row
       .col-xs-12.center
-          h3 Sign in to Adiutor #[b(style="cursor: pointer;",data-toggle="modal", data-target="#login-modal") here] with your Regis credentials and get started. It's that easy!
+          h3 Sign in to OnTrac #[b(style="cursor: pointer;",data-toggle="modal", data-target="#login-modal") here] with your Regis credentials and get started. It's that easy!
     
     .row
       .col-xs-12
@@ -64,7 +64,7 @@ block content
             span.sr-only 40% ready
     .row
       .col-xs-12.text-center
-        a.btn.btn-primary(target="_blank", href="https://github.com/Apexal/adiutor") Source Code
+        a.btn.btn-primary(target="_blank", href="https://github.com/Apexal/ontrac") Source Code
     
     #tweet
       script.
