--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -7,11 +7,11 @@ header
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href="#") Adiutor
+        a.navbar-brand(href="#") OnTrac
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
-          li(class=(title=="Adiutor" || title=="Your Home" ? "active" : ""))
-            a(href=(title=="Adiutor" || title=="Your Home" ? "#" : "/"), title="The homepage.") Home
+          li(class=(title=="OnTrac" || title=="Your Home" ? "active" : ""))
+            a(href=(title=="OnTrac" || title=="Your Home" ? "#" : "/"), title="The homepage.") Home
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false') View 
                 span.caret
