--- a/views/users/login-modal.jade
+++ b/views/users/login-modal.jade
@@ -7,7 +7,7 @@
         if openLogin
           h4.modal-title Login to Access Page
         else
-          h4.modal-title Login to Adiutor
+          h4.modal-title Login to OnTrac
       .modal-body
         .container-fluid
           .row
@@ -27,6 +27,6 @@
                     determine whether correct credentials are entered or not. This is just to remove the need for
                     registration and make logging in simpler.
                   br
-                  span Don't believe me? See #[a(target="_blank", href="https://github.com/Apexal/adiutor/blob/master/routes/index.js") for yourself].
+                  span Don't believe me? See #[a(target="_blank", href="https://github.com/Apexal/ontrac/blob/master/routes/index.js") for yourself].
 
                 button.btn.right.btn-primary#login-button Login
