Fixed up index page

--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -9,21 +9,37 @@ block content
         In just #[b= moment("2015-09-09").fromNow(true)] it will begin again. The work, the stress, the responsibilities. If only there
         was a way to make it all easier.
     
+
     .row
-      .col-xs-12.col-sm-6.col-md-5.center
+      
+      .col-xs-12.col-sm-6.center
         img.panel.panel-default(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
-      .col-xs-12.col-sm-6.col-md-7.no-margin
-        .page-header.no-margin
-          h3.no-margin What is it?
-        br
-        p.
-          #[b OnTrac] is a free, online Web service created specifically to allow Regis
-          students to get a better grasp on their academic life while at the same 
-          time providing an easy, customized platform for organization and collaboration
-          with their classmates and schoolmates.
         
-        p No
-    .row
+        hr
+        br
+        b O
+        span  - Open-source
+        br
+        
+        b N
+        span  - Networked
+        br
+
+        b T
+        span  - Third-party
+        br
+        
+        b R
+        span  - Regis High School
+        br
+
+        b A
+        span  - Academic
+        br
+
+        b C
+        span  - Connector
+        
       
       .col-xs-12.col-sm-6
         .panel.panel-primary
@@ -35,7 +51,6 @@ block content
               students to get a better grasp on their academic life while at the same 
               time providing an easy, customized platform for organization and collaboration
               with their classmates and schoolmates.
-      .col-xs-12.col-sm-6
         .panel.panel-info
           .panel-heading
             h1.panel-title What does it do?
