--- a/views/info.jade
+++ b/views/info.jade
@@ -13,4 +13,4 @@ if errs.length > 0
     button.close(type="button", data-dismiss="alert")
       span &times;
 
-.alert.alert-danger Moodle has not yet been updated to reflect the new schedules, so data here is out of date till then.
+//.alert.alert-danger Moodle has not yet been updated to reflect the new schedules, so data here is out of date till then.
