--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -35,13 +35,13 @@ aside#sidebar
     ul.nav
       li
         a(title="Manage your reminders.", href="#", data-target="#reminders-modal", data-toggle="modal") Reminders
-          span.badge.right#reminders-count 0 
-      li
-        a(title="Manage your grades.", href="#") Grades
-          //span.badge.right 0
-      li(class=(helpers.isPage(page, "days") ? "active" : ""))
-        a(href="/days", title="View all days that you have work (homework, tests, etc).") Work
-          //span.badge.right 0
+          span.label.label-primary.right#reminders-count &nbsp;
+      li(class=(helpers.isPage(page, "grades") ? "active" : ""))
+        a(title="Manage your grades.", href="/grades") Grades
+          span.label.label-success.right.fa.fa-check 
+      li(class=(helpers.isPage(page, "work") ? "active" : ""))
+        a(href="/work", title="View all days that you have work (homework, tests, etc).") Work
+          span.label.label-danger.right &nbsp;&nbsp;!&nbsp;&nbsp;
       li
         a(title="View and manage your friend list.", href="#") Friends
           //span.badge.right 0
