--- a/assets/css/advisement.css
+++ b/assets/css/advisement.css
@@ -2,4 +2,22 @@
 .advisement-user-box button {
   padding-left: 0;
   padding-right: 0;
+  font-size: 80%;
+}
+
+.advisement-user-box {
+  margin: 30px;
+}
+
+.advisement-user-box.registered button {
+  font-weight: bold;
+}
+
+#advisement-teacher-img {
+  max-width: 150px;
+  border: 4px solid #333;
+}
+
+.advisement-user-box, .advisement-user-box img {
+  width: 100%;
 }
