--- a/views/courses/one.jade
+++ b/views/courses/one.jade
@@ -34,7 +34,7 @@ block content
               td.larger(style="vertical-align: middle;")
                 a.undecorated(href="/advisements/"+user.advisement)= user.advisement
               td.larger(style="vertical-align: middle")= user.gradeName
-              td.larger(style="vertical-align: middle;")= user.fullName
+              td.user-badge.larger(data-username=user.username, style="vertical-align: middle;")= user.fullName
     
     .row
       .col-xs-12
