--- a/views/advisement/one.jade
+++ b/views/advisement/one.jade
@@ -28,8 +28,8 @@ block content
         
         .col-xs-12.col-sm-8
           for user in students
-            .col-xs-12.col-sm-2.text-center
-              .advisement-user-box(class=( user.registered ? 'registered' : ''))
+            .col-xs-12.col-sm-4.col-md-3.col-lg-2.text-center
+              .advisement-user-box.text-center(class=( user.registered ? 'registered' : ''))
                 img(alt=user.bio, src=user.ipicture)
                 .btn-group.full-width
                   button.user-badge.full-width.btn.btn-default(data-username=user.username, type="button")= user.fullName
